Fixes <ol> elements spacing in articles

--- a/app/assets/stylesheets/application/style.sass
+++ b/app/assets/stylesheets/application/style.sass
@@ -2,7 +2,7 @@ $theme_color: #0C79A3
 
 body
   font-size: 100%
-  color: #555
+  color: #333
   font-family: "Helvetica Neue", "Verdana", "Arial", "Sans-serif"
   background: #fdfdfd
 
@@ -37,14 +37,14 @@ a:hover
   text-decoration: none
   transition: 0.3s
 
-p, ul
+p, ul, ol
   margin-bottom: 20px
   line-height: 1.8em
 
   a
     color: $theme_color
 
-ul
+ul, ol
   margin: 0 0 15px 15px
 
 span.detail
@@ -240,8 +240,10 @@ body.content_layout
         font-weight: bold
         margin-bottom: 10px
 
-      ul
+      ul, ol
         margin: 0 0 15px 25px
+        li
+          margin: 0 0 5px 0
 
       a
         text-decoration: underline
